--- a/package.json
+++ b/package.json
@@ -16,12 +16,6 @@
     "karma-junit-reporter": "^0.2.2",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6",
-    "requirejs": "",
-    "express": "",
-      "serve-favicon": "",
-      "morgan": "",
-      "errorhandler": "",
-      "ejs": ""
   },
   "scripts": {
     "postinstall": "bower install",
@@ -39,6 +33,9 @@
   "dependencies": {
     "express": "^4.13.4",
     "requirejs": "^2.1.22",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "morgan": "",
+    "errorhandler": "",
+    "ejs": ""
   }
 }
